--- a/cart.html
+++ b/cart.html
@@ -63,6 +63,9 @@
   </div>
   
   <!-- ENTREGA 7!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
+
+    <!-- MENSAJE para cuando el carrito está vacío-->
+
   <div id="empty-cart-message" class="text-center" style="display: none;">
     <h3>Tu carrito está vacío</h3>
     <button class="btn btn-primary" onclick="window.location.href='products.html'">Inicia tu compra</button>
@@ -92,6 +95,8 @@
               <option value="Standard">Standard 12 a 15 días (5%)</option>
             </select>
           </div>
+            <!-- Formulatio que completa el cliente apra finalizar su compra-->
+
           <div class="form-group">
             <p>Dirección de envío</p>
             <label for="Departamento-address">Departamento</label>
@@ -113,11 +118,14 @@
               <option value="Transfer">Transferencia bancaria</option>
             </select>
           </div>
+            <!-- aca puede elegir la moneda -->
+
           <label for="currency-type">Moneda para el total:</label>
           <select id="currency-type">
             <option value="UYU">UYU</option>
             <option value="USD">USD</option>
           </select>
+  <!--Visualización de los costos -->
 
           <div class="form-group">
             <p>Costos</p>
