--- a/cart.html
+++ b/cart.html
@@ -9,7 +9,6 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
 
@@ -31,28 +30,24 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
-          </li>
-                  <!-- Entrega 5 inicio MENU DESPLEGABLE-->
-          <div class="dropdown">
-            <li class="nav-item dropdown">
-              <button class="btn" type="button" data-bs-toggle="dropdown" aria-expanded="false"> 
-                <span id="user-navbar" class="nav-link"></span> 
-              </button>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/cart.html">Mi carrito</a></li>
-                <li><a class="dropdown-item" href="/my-profile.html">Mi perfil</a></li>
-                <li><a class="dropdown-item" href="/login.html">Cerrar Sesión</a></li>
-              </ul>
-            </li>
+          <!-- Entrega 5 inicio MENU DESPLEGABLE-->
+           <li class="nav-item dropdown">
+  <button class="btn" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    <span id="user-navbar" class="nav-link">Usuario</span>
+  </button>
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="/my-profile.html">Mi perfil</a></li>
+    <li><a class="dropdown-item" href="/login.html">Cerrar Sesión</a></li>
+  </ul>
+       </li>
+
+        </ul>
       </div>
-      </ul>
     </div>
-  </div>
-  <div class="form-check form-switch">
-    <input class="form-check-input" type="checkbox" id="modeSwitch">
-    <label class="form-check-label" for="modeSwitch">Modo Noche</label>
-  </div>
+    <div class="form-check form-switch">
+      <input class="form-check-input" type="checkbox" id="modeSwitch">
+      <label class="form-check-label" for="modeSwitch">Modo Noche</label>
+    </div>
   </nav>
   <main>
     <h4 id="titulo-carrito">Carrito de compras</h4>
