--- a/cart.html
+++ b/cart.html
@@ -63,7 +63,7 @@
 
   <div id="empty-cart-message" class="text-center" style="display: none;">
     <h3>Tu carrito está vacío</h3>
-    <button class="btn btn-primary" onclick="window.location.href='products.html'">Inicia tu compra</button>
+    <button class="btn btn-primary" onclick="window.location.href='categories.html'">Inicia tu compra</button>
 </div>
 
    <!-- Botón para abrir el modal -->
